--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/cinzel": "^5.1.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.4.3",
     "@mui/styles": "^5.13.2",
